# CHANGELOG

## Add a icon for file manager

## Begin the Artix patches/version - February 3

- Added a WIP (is a copy of the arch folder so some package might not exist, will fix those soon) artix folder to add folder/repo for Artix Linux
- Modified the .bash_profile to some fixes for Artix Linux
- Add a small fix for the caelestia setup scripts
- Add some packaeges to Arch and Artix

## Better Themings - February 1 2026

- Update the scripts and moved them to a `scripts` folder
- Added new screenshots for the README.md
- Update the README.md file with new screenshots
- Update `flameshot.ini` file config for the flameshot config
- Update bash config
- Update the hyprland config
- Update QT and GTK themes config (temporaly default dark themes until i get them from the internet back into the repo)
- Update `.gitignore` file to remove the hyprland `monitors.conf` config file as it is auto-generated by nwg-display
- Added experimental hyprscrolling config fand extension or hyprland

## Update the installer - Febraury 1 2026

- Update and fix the installer script
- Add the missing packages for the installer json files

## Fixes Hyprpaper - February 1 2026

- Fix hyprpaper config for including more monitors setups

## Minor changes - 28 January 2026 

Make bigger gap for hyprland

Add a file for the future Xgui4 OS Shell

## Minor Changes - 27 january 2026 - 10:32

Add alias for icat in fish config and create get-shell script for caelestia-shell installation

## Multiples changes

- Remove screenshots from the main repo since it is no longer on this repo 

## Separed the caelestia-shell to a separate github repo (which is a fork of caelestia-dos/shell)

Now live at [xgui4:caelestia-shell](https://github.com/xgui4/caelestia-shell)

## Add new Experimental Caelestia Session - January 26

- Add a new caelestia shell desktop entry with caelestia specific pathch
- Change multiple caelestia shell config
- Add a WIP `THANKS.MD` file for credits