@@ -16,3 +16,6 @@ quickshell/.config/quickshell/shell
 
 # auto generated by nwg-display
 hyprland/.config/hypr/monitors.conf
+
+# temporaly until i fix the link of gtk with its assets
+gtk/.config/gtk-4.0/assets
