@@ -1,14 +1,14 @@
 [Settings]
-gtk-theme-name=Colloid-Purple-Dark-Compact-Dracula
-gtk-icon-theme-name=breeze-dark
-gtk-font-name=Adwaita Sans 11
-gtk-cursor-theme-name=Qogir, 25
+gtk-theme-name=catppuccin-macchiato-mauve-standard+default
+gtk-icon-theme-name=matefaenza
+gtk-font-name=Noto Sans  10
+gtk-cursor-theme-name=catppuccin-macchiato-mauve-cursors
 gtk-cursor-theme-size=25
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
-gtk-enable-event-sounds=0
+gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
