@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Colloid-Purple-Dark-Compact-Dracula
-gtk-icon-theme-name=breeze-dark
-gtk-font-name=Adwaita Sans 11
-gtk-cursor-theme-name=Qogir, 25
+gtk-theme-name=catppuccin-macchiato-mauve-standard+default
+gtk-icon-theme-name=matefaenza
+gtk-font-name=Noto Sans  10
+gtk-cursor-theme-name=catppuccin-macchiato-mauve-cursors
 gtk-cursor-theme-size=25
 gtk-application-prefer-dark-theme=1
