@@ -1,21 +1,16 @@
 # Autostart applications for Hyprland
-exec-once = waybar 
-exec-once = hyprpaper 
-exec-once = hyprshell run &
-exec-once = hypridle
-exec-once = copyq
-exec-once = hyprpm reload
-exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6
-exec-once = brightnessctl s 100%
-exec-once = flameshot
-exec-once = swayosd-server
+exec-once = waybar &
+exec-once = hyprpaper &
+exec-once = hypridle &
+exec-once = copyq & 
+exec-once = hyprpm reload &
+exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6 &
+exec-once = brightnessctl s 100% &
+exec-once = flameshot &
+exec-once = swayosd-server &
 
 # hpyrpolkit agent, for the auth agent, you change choose a other one if you want
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent &
 
 # Network manager applet
-exec-once = nm-applet --indicator
-exec-once = blueman-applet
-exec-once = qs -c overview
-
-exec-once = gnome-keyring-daemon --start --components=secrets
+exec-once = qs -c overview 
