@@ -32,7 +32,7 @@ exec-once = flameshot
 exec-once = swayosd-server
 
 # hpyrpolkit agent, for the auth agent, you change choose a other one if you want
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent &
 
 exec-once = qs -c overview
 exec-once = qs -c shell
@@ -50,7 +50,7 @@ exec-once = mpris-proxy
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-exec-once = gnome-keyring-daemon --start --components=secrets
+# exec-once = gnome-keyring-daemon --start --components=secrets
 
 #############################
 ### ENVIRONMENT VARIABLES ###k
@@ -104,7 +104,6 @@ xwayland:force_zero_scaling = true
 ####################
 
 source = ~/.config/hypr/plugins.conf
-
 
 ###############################
 ## Caelestia Specific Config ##
