@@ -1,9 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/darker.conf
+color_scheme_path=/usr/share/qt5ct/colors/catppuccin-macchiato-mauve.conf
 custom_palette=true
-icon_theme=breeze-dark
+icon_theme=matefaenzadark
 standard_dialogs=xdgdesktopportal
-style=Fusion
+style=Windows
 
 [Fonts]
 fixed="Sans Serif,9,-1,5,50,0,0,0,0,0"
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4\x38\0\0\ag\0\0\b\x18\0\0\0\0\0\0\x4\x38\0\0\a\x7f\0\0\bo\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\x4\x38\0\0\ag\0\0\b\x18)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4\x38\0\0\ag\0\0\b0\0\0\0\0\0\0\x4\x38\0\0\ag\0\0\b0\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\x4\x38\0\0\ag\0\0\b0)
 
 [Troubleshooting]
 force_raster_widgets=1
