@@ -1,0 +1,11 @@
+#!/usr/bin/bash
+
+hyprpm update
+
+hyprpm add https://github.com/hyprwm/hyprland-plugins
+
+hyprpm enable hyprscrolling
+
+hyprpm enable hyprbars
+
+hyprpm enable hyprexpo
