@@ -1,0 +1,9 @@
+#!/usr/bin/bash
+
+hyprpm update
+
+hyprpm enable hyprscrolling
+
+hyprpm enable hyprbars
+
+hyprpm enable hyprexpo
