@@ -1,6 +1,8 @@
 # CHANGELOG
 
-## Add a icon for file manager
+## More Scripts + fix installer name + more fix for artix + modified the theme for qt + gtk- Feb 3
+
+## Add a icon for file manager - Feb 3
 
 ## Begin the Artix patches/version - February 3
 
